ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
  - host: www.adv-it.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
             name: main
             port:
               number: 80

  - host: web1.adv-it.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
             name: web1
             port:
               number: 80

  - host: web2.adv-it.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
             name: web2
             port:
               number: 80

  - host: cat.adv-it.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
             name: tomcat
             port:
               number: 8080
